modifying sourcecode space and replacing Arxiv link with Google drive link for downloading paper

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 				<tr>
 					<td align=center width=120px>
 						<center>
-							<span style="font-size:24px"><a href=''>[Paper]</a></span>
+							<span style="font-size:24px">[Paper]</span>
 						</center>
 					</td>
 					<td align=center width=120px>
@@ -116,7 +116,7 @@
 				
 			</table>
 
-				<p style="margin-top: 20px; color:gray"> We will share our sourcecode soon.
+				<p style="margin-top: 20px; color:gray"> We will share our source code soon.
 				</p>
 
 		</table>
@@ -201,7 +201,8 @@ Unfortunately, pruning a generative model has not been extensively explored, and
 			<td><span style="font-size:14pt">Sangyeop Yeo, Yoojin Jang, Jy-yong Sohn, Dongyoon Han, Jaejun Yoo.<br>
 				<b>Can We Find Strong Lottery Tickets in Generative Models?</b><br>
 				AAAI 2023 Accepted<br>
-				(hosted on <a href="">ArXiv</a>)<br>
+				Download our paper directly from Google Drive
+				 [<a href="">Paper</a>] [<a href="">Supplementary</a>]<br>
 				<!-- (<a href="./resources/camera-ready.pdf">camera ready</a>)<br> -->
 				<span style="font-size:4pt"><a href=""><br></a>
 				</span>
@@ -210,14 +211,14 @@ Unfortunately, pruning a generative model has not been extensively explored, and
 	</table>
 	<br>
 
-	<table align=center width=600px>
+	<!--<table align=center width=600px>
 		<tr>
 			<td><span style="font-size:14pt"><center>
 				<a href="./resources/bibtex.txt">[Bibtex]</a>
 			</center></td>
 		</tr>
 	</table>
-
+-->
 	<hr>
 	<br>
 
