--- a/index.html
+++ b/index.html
@@ -103,7 +103,12 @@
 				<tr>
 					<td align=center width=120px>
 						<center>
-							<span style="font-size:24px">[Paper]</span>
+							<span style="font-size:24px"><a href="https://drive.google.com/file/d/1lZbtDHePG7ItA1bTGijtA-yXB7XBWN2C/view?usp=share_link">[Paper]</a></span>
+						</center>
+					</td>
+					<td align=center width=120px>
+						<center>
+							<span style="font-size:24px"><a href="https://drive.google.com/file/d/1n0gPmx9KjfJGTGnZgc_1tDVNL2Qo8wp5/view?usp=share_link">[Suppplementary]</a></span>
 						</center>
 					</td>
 					<td align=center width=120px>
@@ -197,12 +202,12 @@ Unfortunately, pruning a generative model has not been extensively explored, and
 	<table align=center width=450px>
 		<center><h1>Paper and Supplementary Material</h1></center>
 		<tr>
-			<td><a href=""><img class="layered-paper-big" style="height:175px" src="./resources/paper.png"/></a></td>
+			<td><a href="https://drive.google.com/file/d/1lZbtDHePG7ItA1bTGijtA-yXB7XBWN2C/view?usp=share_link"><img class="layered-paper-big" style="height:175px" src="./resources/paper.png"/></a></td>
 			<td><span style="font-size:14pt">Sangyeop Yeo, Yoojin Jang, Jy-yong Sohn, Dongyoon Han, Jaejun Yoo.<br>
 				<b>Can We Find Strong Lottery Tickets in Generative Models?</b><br>
 				AAAI 2023 Accepted<br>
 				Download our paper directly from Google Drive
-				 [<a href="">Paper</a>] [<a href="">Supplementary</a>]<br>
+				 [<a href="https://drive.google.com/file/d/1lZbtDHePG7ItA1bTGijtA-yXB7XBWN2C/view?usp=share_link">Paper</a>] [<a href="https://drive.google.com/file/d/1n0gPmx9KjfJGTGnZgc_1tDVNL2Qo8wp5/view?usp=share_link">Supplementary</a>]<br>
 				<!-- (<a href="./resources/camera-ready.pdf">camera ready</a>)<br> -->
 				<span style="font-size:4pt"><a href=""><br></a>
 				</span>
