--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ Unfortunately, pruning a generative model has not been extensively explored, and
 			<td><a href="https://drive.google.com/file/d/1lZbtDHePG7ItA1bTGijtA-yXB7XBWN2C/view?usp=share_link" target="_blank"><img class="layered-paper-big" style="height:175px" src="./resources/paper.png"/></a></td>
 			<td><span style="font-size:14pt">Sangyeop Yeo, Yoojin Jang, Jy-yong Sohn, Dongyoon Han, Jaejun Yoo.<br>
 				<b>Can We Find Strong Lottery Tickets in Generative Models?</b><br>
-				AAAI 2023 Accepted<br>
+				AAAI'23 Accepted<br>
 				Download our paper directly from Google Drive
 				 [<a href="https://drive.google.com/file/d/1lZbtDHePG7ItA1bTGijtA-yXB7XBWN2C/view?usp=share_link" target="_blank">Paper</a>] [<a href="https://drive.google.com/file/d/1n0gPmx9KjfJGTGnZgc_1tDVNL2Qo8wp5/view?usp=share_link"  target="_blank">Supplementary</a>]<br>
 				<!-- (<a href="./resources/camera-ready.pdf">camera ready</a>)<br> -->
@@ -246,6 +246,20 @@ Unfortunately, pruning a generative model has not been extensively explored, and
 	</table>
 
 <br>
+<hr>
+
+<table align=center width=100% style=" background-color:#F6F8FB">
+	<tr>
+		<td width=400px>
+				<p style="text-align:center; ">2022 LAIT</p>
+		</td>
+	</tr>
+	<tr><br></tr>
+	<tr><td><img style="display:block; margin: auto;" 
+		src="https://lh6.googleusercontent.com/wUwlYXGvTrKDZ48oNBOCytawEjmuvx3SHKXxAb3ZDJl2CFGL4UBr7xhcXfrzU5si3anNpdnwwoVnieLfZQhEQLxSAUHRHYxYCn9VAjJcjKjX1ZcVnAx-BdgARkFO4MStpRVEmRv776DvaCJFnQepoQ=w16383"></td></tr>
+</table>
+
+
 </body>
 </html>
 
