--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	
 	<br>
 	<center>
-		<span style="font-size:36px">Can We Find Strong Lottery Tickets in Generative Models?</span>
+		<span style="font-size:36px">Can We Find Strong Lottery Tickets in Generative Models? (AAAI'23)</span>
 		<br>
 		<table align=center width=750px>
 			<table align=center width=750px>
@@ -205,7 +205,7 @@ Unfortunately, pruning a generative model has not been extensively explored, and
 			<td><a href="https://drive.google.com/file/d/1lZbtDHePG7ItA1bTGijtA-yXB7XBWN2C/view?usp=share_link" target="_blank"><img class="layered-paper-big" style="height:175px" src="./resources/paper.png"/></a></td>
 			<td><span style="font-size:14pt">Sangyeop Yeo, Yoojin Jang, Jy-yong Sohn, Dongyoon Han, Jaejun Yoo.<br>
 				<b>Can We Find Strong Lottery Tickets in Generative Models?</b><br>
-				AAAI'23 Accepted<br>
+				AAAI 2023 Accepted<br>
 				Download our paper directly from Google Drive
 				 [<a href="https://drive.google.com/file/d/1lZbtDHePG7ItA1bTGijtA-yXB7XBWN2C/view?usp=share_link" target="_blank">Paper</a>] [<a href="https://drive.google.com/file/d/1n0gPmx9KjfJGTGnZgc_1tDVNL2Qo8wp5/view?usp=share_link"  target="_blank">Supplementary</a>]<br>
 				<!-- (<a href="./resources/camera-ready.pdf">camera ready</a>)<br> -->
