video, poster 추가

--- a/index.html
+++ b/index.html
@@ -65,10 +65,13 @@
 			</div>
 		<div class="container">
 			<div class="item">
-			<span style="font-size:24px"><a href="https://drive.google.com/file/d/1lZbtDHePG7ItA1bTGijtA-yXB7XBWN2C/view?usp=share_link"  target="_blank">[Paper]</a></span>
+			<span style="font-size:24px"><a href="https://arxiv.org/abs/2212.08311"  target="_blank">[Paper]</a></span>
 		</div>
 		<div class="item">
-			<span style="font-size:24px"><a href="https://drive.google.com/file/d/1n0gPmx9KjfJGTGnZgc_1tDVNL2Qo8wp5/view?usp=share_link"  target="_blank">[Suppplementary]</a></span>
+			<span style="font-size:24px"><a href="https://youtu.be/8bvk0LzoVB4"  target="_blank">[Video]</a></span>
+		</div>
+		<div class="item">
+			<span style="font-size:24px"><a href="https://drive.google.com/file/d/1DToxSE_wQghAt8XVGITncVBSe8dyyE3K/view?usp=share_link"  target="_blank">[Poster]</a></span>
 		</div>
 		<div class="item">
 			<span style="font-size:24px">[GitHub]</span>
@@ -146,13 +149,12 @@ Unfortunately, pruning a generative model has not been extensively explored, and
 	<table align=center width=90% >
 		<center><h1>Paper and Supplementary Material</h1></center>
 		<tr>
-			<td><a href="https://drive.google.com/file/d/1lZbtDHePG7ItA1bTGijtA-yXB7XBWN2C/view?usp=share_link" target="_blank"><img class="layered-paper-big supple_img" style="height:175px" src="./resources/paper.png"/></a></td>
+			<td><a href="https://arxiv.org/abs/2212.08311" target="_blank"><img class="layered-paper-big supple_img" style="height:175px" src="./resources/paper.png"/></a></td>
 			<td><span >Sangyeop Yeo, Yoojin Jang, Jy-yong Sohn, Dongyoon Han, Jaejun Yoo.<br>
 				<b>Can We Find Strong Lottery Tickets in Generative Models?</b><br>
 				AAAI 2023 Accepted<br>
-				Download our paper directly from Google Drive
-				 [<a href="https://drive.google.com/file/d/1lZbtDHePG7ItA1bTGijtA-yXB7XBWN2C/view?usp=share_link" target="_blank">Paper</a>] [<a href="https://drive.google.com/file/d/1n0gPmx9KjfJGTGnZgc_1tDVNL2Qo8wp5/view?usp=share_link"  target="_blank">Supplementary</a>]<br>
-				<!-- (<a href="./resources/camera-ready.pdf">camera ready</a>)<br> -->
+				 Arxiv
+				 [<a href="https://arxiv.org/abs/2212.08311" target="_blank">Link</a>] <!-- (<a href="./resources/camera-ready.pdf">camera ready</a>)<br> -->
 				<span style="font-size:4pt"><a href=""><br></a>
 				</span>
 			</td>
