--- a/index.html
+++ b/index.html
@@ -74,11 +74,10 @@
 			<span style="font-size:24px"><a href="https://drive.google.com/file/d/1DToxSE_wQghAt8XVGITncVBSe8dyyE3K/view?usp=share_link"  target="_blank">[Poster]</a></span>
 		</div>
 		<div class="item">
-			<span style="font-size:24px">[GitHub]</span>
+			<span style="font-size:24px"><a href="https://github.com/LAIT-CVLab/SLT-in-Generative-Models">[Github]</a></span>
 		</div>
 		<div class="container">
-				<p style="margin-top: 20px; color:gray"> We will share our source code soon.
-				</p>
+				
 		</div>					
 		</div>
 
